TP5/obj/TP5.output
Estado 5 conflictos: 2 reducción(ones)/reducción(ones)
Estado 31 conflictos: 3 reducción(ones)/reducción(ones)
Estado 75 conflictos: 35 reducción(ones)/reducción(ones)
Estado 113 conflictos: 3 reducción(ones)/reducción(ones)
Estado 297 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: unidad_de_programa $end

    1 unidad_de_programa: /* vacío */

    2 $@1: /* vacío */

    3 unidad_de_programa: unidad_de_programa $@1 unidad_de_traduccion

    4 unidad_de_traduccion: declaracion_externa
    5                     | sentencia

    6 declaracion_externa: definicion_de_funcion
    7                    | declaracion

    8 $@2: /* vacío */

    9 definicion_de_funcion: especificadores_de_declaracion declarador lista_de_declaracion $@2 sentencia_compuesta

   10 $@3: /* vacío */

   11 definicion_de_funcion: declarador lista_de_declaracion $@3 sentencia_compuesta

   12 $@4: /* vacío */

   13 definicion_de_funcion: especificadores_de_declaracion declarador $@4 sentencia_compuesta

   14 $@5: /* vacío */

   15 definicion_de_funcion: declarador $@5 sentencia_compuesta

   16 declaracion: especificadores_de_declaracion lista_declaradores_init ';'
   17            | especificadores_de_declaracion ';'
   18            | error ';'

   19 lista_de_declaracion: declaracion
   20                     | lista_de_declaracion declaracion

   21 especificadores_de_declaracion: ESPECIFICADOR_CLASE_DE_ALMACENAMIENTO especificadores_de_declaracion_o_vacio
   22                               | especificador_de_tipo
   23                               | CALIFICADOR_DE_TIPOS especificadores_de_declaracion_o_vacio

   24 especificadores_de_declaracion_o_vacio: especificadores_de_declaracion
   25                                       | /* vacío */

   26 especificador_de_tipo: ESPECIFICADOR_DE_TIPOS
   27                      | especificador_estructura_o_union
   28                      | especificador_enum
   29                      | TYPEDEF

   30 especificador_estructura_o_union: ESPECIFICADOR_STRUCT_UNION IDENTIFICADOR '{' lista_declaraciones_struct '}'
   31                                 | ESPECIFICADOR_STRUCT_UNION '{' lista_declaraciones_struct '}'
   32                                 | ESPECIFICADOR_STRUCT_UNION IDENTIFICADOR

   33 lista_declaraciones_struct: declaracion_struct
   34                           | lista_declaraciones_struct declaracion_struct

   35 lista_declaradores_init: declarador_init

   36 $@6: /* vacío */

   37 lista_declaradores_init: lista_declaradores_init $@6 ',' declarador_init

   38 declarador_init: declarador

   39 $@7: /* vacío */

   40 declarador_init: declarador '=' inicializador $@7

   41 declaracion_struct: lista_calificador_especificador lista_declaradores_struct ';'
   42                   | error ';'

   43 lista_calificador_especificador: especificador_de_tipo lista_calificador_especificador
   44                                | especificador_de_tipo
   45                                | CALIFICADOR_DE_TIPOS lista_calificador_especificador
   46                                | CALIFICADOR_DE_TIPOS

   47 lista_declaradores_struct: declarador_struct
   48                          | lista_declaradores_struct ',' declarador_struct

   49 declarador_struct: declarador
   50                  | declarador ':' expresion_condicional
   51                  | ':' expresion_condicional

   52 especificador_enum: ENUM IDENTIFICADOR '{' lista_de_enumerador '}'
   53                   | ENUM '{' lista_de_enumerador '}'
   54                   | ENUM IDENTIFICADOR

   55 lista_de_enumerador: enumerador
   56                    | lista_de_enumerador ',' enumerador

   57 enumerador: IDENTIFICADOR
   58           | IDENTIFICADOR '=' expresion_condicional

   59 declarador: apuntador declarador_directo
   60           | declarador_directo

   61 @8: /* vacío */

   62 declarador_directo: IDENTIFICADOR @8 R_declarador_directo
   63                   | '(' declarador ')' R_declarador_directo

   64 $@9: /* vacío */

   65 R_declarador_directo: '[' expresion_condicional ']' $@9 R_declarador_directo

   66 $@10: /* vacío */

   67 R_declarador_directo: '[' ']' $@10 R_declarador_directo

   68 $@11: /* vacío */

   69 R_declarador_directo: '(' $@11 lista_tipos_de_parametro ')' R_declarador_directo

   70 $@12: /* vacío */

   71 R_declarador_directo: '(' $@12 lista_de_identificadores ')' R_declarador_directo

   72 $@13: /* vacío */

   73 R_declarador_directo: '(' $@13 ')' R_declarador_directo
   74                     | /* vacío */

   75 $@14: /* vacío */

   76 apuntador: '*' $@14 apuntador
   77          | '*'

   78 lista_tipos_de_parametro: lista_de_parametros
   79                         | lista_de_parametros ',' TRES_PUNTOS

   80 lista_de_parametros: declaracion_de_parametro
   81                    | lista_de_parametros ',' declaracion_de_parametro

   82 declaracion_de_parametro: especificadores_de_declaracion declarador
   83                         | especificadores_de_declaracion declarador_abstracto
   84                         | especificadores_de_declaracion

   85 lista_de_identificadores: IDENTIFICADOR
   86                         | lista_de_identificadores ',' IDENTIFICADOR

   87 inicializador: expresion_de_asignacion
   88              | '{' lista_de_inicializadores '}'
   89              | '{' lista_de_inicializadores ',' '}'

   90 lista_de_inicializadores: inicializador
   91                         | lista_de_inicializadores ',' inicializador

   92 nombre_de_tipo: lista_calificador_especificador declarador_abstracto
   93               | lista_calificador_especificador

   94 declarador_abstracto: apuntador
   95                     | apuntador declarador_abstracto_directo
   96                     | declarador_abstracto_directo

   97 declarador_abstracto_directo: '(' declarador_abstracto ')'
   98                             | declarador_abstracto_directo '[' expresion_condicional ']'
   99                             | '[' expresion_condicional ']'
  100                             | declarador_abstracto_directo '[' ']'
  101                             | '[' ']'
  102                             | declarador_abstracto_directo '(' lista_tipos_de_parametro ')'
  103                             | '(' lista_tipos_de_parametro ')'
  104                             | declarador_abstracto_directo '(' ')'
  105                             | '(' ')'

  106 sentencia: sentencia_etiquetada
  107          | sentencia_expresion
  108          | sentencia_compuesta
  109          | sentencia_de_seleccion
  110          | sentencia_de_iteracion
  111          | sentencia_de_salto
  112          | error ';'

  113 sentencia_etiquetada: IDENTIFICADOR ':' sentencia
  114                     | CASE expresion_condicional ':' sentencia
  115                     | DEFAULT ':' sentencia

  116 sentencia_expresion: expresion ';'
  117                    | ';'

  118 sentencia_compuesta: '{' X '}'
  119                    | '{' Z '}'

  120 X: lista_de_declaracion Y
  121  | /* vacío */

  122 Y: lista_de_sentencias X
  123  | /* vacío */

  124 Z: lista_de_sentencias X

  125 lista_de_sentencias: sentencia
  126                    | lista_de_sentencias sentencia

  127 sentencia_de_seleccion: IF '(' expresion ')' sentencia sentencia_de_seleccion_aux
  128                       | SWITCH '(' expresion ')' sentencia

  129 sentencia_de_seleccion_aux: ELSE sentencia
  130                           | /* vacío */

  131 sentencia_de_iteracion: WHILE '(' expresion ')' sentencia
  132                       | DO sentencia WHILE '(' expresion ')' ';'
  133                       | FOR '(' expresion_o_vacio ';' expresion_o_vacio ';' expresion_o_vacio ')' sentencia

  134 expresion_o_vacio: expresion
  135                  | /* vacío */

  136 sentencia_de_salto: GOTO IDENTIFICADOR ';'
  137                   | CONTINUE_O_BREAK ';'
  138                   | RETURN expresion ';'
  139                   | RETURN ';'

  140 expresion: expresion_de_asignacion
  141          | expresion ',' expresion_de_asignacion

  142 expresion_de_asignacion: expresion_condicional
  143                        | expresion_unaria operador_de_asignacion expresion_de_asignacion

  144 operador_de_asignacion: OPERADOR_ASIGNACION
  145                       | '='

  146 expresion_condicional: expresion_logica_or
  147                      | expresion_logica_or '?' expresion ':' expresion_condicional

  148 expresion_logica_or: expresion_logica_and
  149                    | expresion_logica_or OR expresion_logica_and

  150 expresion_logica_and: expresion_or_inclusivo
  151                     | expresion_logica_and AND expresion_or_inclusivo

  152 expresion_or_inclusivo: expresion_or_exclusivo
  153                       | expresion_or_inclusivo '|' expresion_or_exclusivo

  154 expresion_or_exclusivo: expresion_and
  155                       | expresion_or_exclusivo '^' expresion_and

  156 expresion_and: expresion_de_igualdad
  157              | expresion_and '&' expresion_de_igualdad

  158 expresion_de_igualdad: expresion_relacional
  159                      | expresion_de_igualdad IGUAL_O_DISTINTO expresion_relacional

  160 expresion_relacional: expresion_de_corrimiento
  161                     | expresion_relacional SIMBOLO_RELACIONAL expresion_de_corrimiento

  162 expresion_de_corrimiento: expresion_aditiva
  163                         | expresion_de_corrimiento SIMBOLO_CORRIMIENTO expresion_aditiva

  164 expresion_aditiva: expresion_multiplicativa
  165                  | expresion_aditiva '+' expresion_multiplicativa
  166                  | expresion_aditiva '-' expresion_multiplicativa

  167 expresion_multiplicativa: expresion_cast
  168                         | expresion_multiplicativa '*' expresion_cast
  169                         | expresion_multiplicativa '/' expresion_cast
  170                         | expresion_multiplicativa '%' expresion_cast

  171 expresion_cast: expresion_unaria
  172               | '(' nombre_de_tipo ')' expresion_cast

  173 expresion_unaria: expresion_posfija
  174                 | MAS_MAS_O_MENOS_MENOS expresion_unaria
  175                 | operador_unario expresion_cast
  176                 | SIZEOF expresion_unaria
  177                 | SIZEOF '(' nombre_de_tipo ')'

  178 operador_unario: '&'
  179                | '*'
  180                | '+'
  181                | '-'
  182                | '~'
  183                | '!'

  184 expresion_posfija: expresion_primaria
  185                  | expresion_posfija '[' expresion ']'

  186 @15: /* vacío */

  187 expresion_posfija: id @15 '(' lista_expresiones_argumento_o_vacio ')'
  188                  | expresion_posfija '.' IDENTIFICADOR
  189                  | expresion_posfija FLECHA IDENTIFICADOR
  190                  | expresion_posfija MAS_MAS_O_MENOS_MENOS

  191 expresion_primaria: id
  192                   | constante
  193                   | LITERAL_CADENA
  194                   | '(' expresion ')'

  195 id: IDENTIFICADOR

  196 lista_expresiones_argumento_o_vacio: lista_expresiones_argumento
  197                                    | /* vacío */

  198 $@16: /* vacío */

  199 lista_expresiones_argumento: expresion_de_asignacion $@16 r_r

  200 r_r: ',' expresion_de_asignacion r_r
  201    | /* vacío */

  202 constante: CONSTANTE_ENTERA
  203          | CONSTANTE_CARACTER
  204          | CONSTANTE_REAL


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 183
'%' (37) 170
'&' (38) 157 178
'(' (40) 63 69 71 73 97 102 103 104 105 127 128 131 132 133 172 177
    187 194
')' (41) 63 69 71 73 97 102 103 104 105 127 128 131 132 133 172 177
    187 194
'*' (42) 76 77 168 179
'+' (43) 165 180
',' (44) 37 48 56 79 81 86 89 91 141 200
'-' (45) 166 181
'.' (46) 188
'/' (47) 169
':' (58) 50 51 113 114 115 147
';' (59) 16 17 18 41 42 112 116 117 132 133 136 137 138 139
'=' (61) 40 58 145
'?' (63) 147
'[' (91) 65 67 98 99 100 101 185
']' (93) 65 67 98 99 100 101 185
'^' (94) 155
'{' (123) 30 31 52 53 88 89 118 119
'|' (124) 153
'}' (125) 30 31 52 53 88 89 118 119
'~' (126) 182
error (256) 18 42 112
IDENTIFICADOR (258) 30 32 52 54 57 58 62 85 86 113 136 188 189 195
LITERAL_CADENA (259) 193
CONTINUE_O_BREAK (260) 137
CONSTANTE_ENTERA (261) 202
CONSTANTE_REAL (262) 204
CONSTANTE_CARACTER (263) 203
ESPECIFICADOR_DE_TIPOS (264) 26
CALIFICADOR_DE_TIPOS (265) 23 45 46
ESPECIFICADOR_CLASE_DE_ALMACENAMIENTO (266) 21
ESPECIFICADOR_STRUCT_UNION (267) 30 31 32
OPERADOR_ASIGNACION (268) 144
IGUAL_O_DISTINTO (269) 159
SIMBOLO_RELACIONAL (270) 161
SIMBOLO_CORRIMIENTO (271) 163
MAS_MAS_O_MENOS_MENOS (272) 174 190
TRES_PUNTOS (273) 79
AND (274) 151
OR (275) 149
FLECHA (276) 189
ENUM (277) 52 53 54
WHILE (278) 131 132
DO (279) 132
FOR (280) 133
SWITCH (281) 128
CASE (282) 114
DEFAULT (283) 115
RETURN (284) 138 139
IF (285) 127
ELSE (286) 129
GOTO (287) 136
SIZEOF (288) 176 177
TYPEDEF (289) 29


No terminales con las reglas donde aparecen

$accept (57)
    en la izquierda: 0
unidad_de_programa (58)
    en la izquierda: 1 3, en la derecha: 0 3
$@1 (59)
    en la izquierda: 2, en la derecha: 3
unidad_de_traduccion (60)
    en la izquierda: 4 5, en la derecha: 3
declaracion_externa (61)
    en la izquierda: 6 7, en la derecha: 4
definicion_de_funcion (62)
    en la izquierda: 9 11 13 15, en la derecha: 6
$@2 (63)
    en la izquierda: 8, en la derecha: 9
$@3 (64)
    en la izquierda: 10, en la derecha: 11
$@4 (65)
    en la izquierda: 12, en la derecha: 13
$@5 (66)
    en la izquierda: 14, en la derecha: 15
declaracion (67)
    en la izquierda: 16 17 18, en la derecha: 7 19 20
lista_de_declaracion (68)
    en la izquierda: 19 20, en la derecha: 9 11 20 120
especificadores_de_declaracion (69)
    en la izquierda: 21 22 23, en la derecha: 9 13 16 17 24 82 83 84
especificadores_de_declaracion_o_vacio (70)
    en la izquierda: 24 25, en la derecha: 21 23
especificador_de_tipo (71)
    en la izquierda: 26 27 28 29, en la derecha: 22 43 44
especificador_estructura_o_union (72)
    en la izquierda: 30 31 32, en la derecha: 27
lista_declaraciones_struct (73)
    en la izquierda: 33 34, en la derecha: 30 31 34
lista_declaradores_init (74)
    en la izquierda: 35 37, en la derecha: 16 37
$@6 (75)
    en la izquierda: 36, en la derecha: 37
declarador_init (76)
    en la izquierda: 38 40, en la derecha: 35 37
$@7 (77)
    en la izquierda: 39, en la derecha: 40
declaracion_struct (78)
    en la izquierda: 41 42, en la derecha: 33 34
lista_calificador_especificador (79)
    en la izquierda: 43 44 45 46, en la derecha: 41 43 45 92 93
lista_declaradores_struct (80)
    en la izquierda: 47 48, en la derecha: 41 48
declarador_struct (81)
    en la izquierda: 49 50 51, en la derecha: 47 48
especificador_enum (82)
    en la izquierda: 52 53 54, en la derecha: 28
lista_de_enumerador (83)
    en la izquierda: 55 56, en la derecha: 52 53 56
enumerador (84)
    en la izquierda: 57 58, en la derecha: 55 56
declarador (85)
    en la izquierda: 59 60, en la derecha: 9 11 13 15 38 40 49 50 63
    82
declarador_directo (86)
    en la izquierda: 62 63, en la derecha: 59 60
@8 (87)
    en la izquierda: 61, en la derecha: 62
R_declarador_directo (88)
    en la izquierda: 65 67 69 71 73 74, en la derecha: 62 63 65 67
    69 71 73
$@9 (89)
    en la izquierda: 64, en la derecha: 65
$@10 (90)
    en la izquierda: 66, en la derecha: 67
$@11 (91)
    en la izquierda: 68, en la derecha: 69
$@12 (92)
    en la izquierda: 70, en la derecha: 71
$@13 (93)
    en la izquierda: 72, en la derecha: 73
apuntador (94)
    en la izquierda: 76 77, en la derecha: 59 76 94 95
$@14 (95)
    en la izquierda: 75, en la derecha: 76
lista_tipos_de_parametro (96)
    en la izquierda: 78 79, en la derecha: 69 102 103
lista_de_parametros (97)
    en la izquierda: 80 81, en la derecha: 78 79 81
declaracion_de_parametro (98)
    en la izquierda: 82 83 84, en la derecha: 80 81
lista_de_identificadores (99)
    en la izquierda: 85 86, en la derecha: 71 86
inicializador (100)
    en la izquierda: 87 88 89, en la derecha: 40 90 91
lista_de_inicializadores (101)
    en la izquierda: 90 91, en la derecha: 88 89 91
nombre_de_tipo (102)
    en la izquierda: 92 93, en la derecha: 172 177
declarador_abstracto (103)
    en la izquierda: 94 95 96, en la derecha: 83 92 97
declarador_abstracto_directo (104)
    en la izquierda: 97 98 99 100 101 102 103 104 105, en la derecha:
    95 96 98 100 102 104
sentencia (105)
    en la izquierda: 106 107 108 109 110 111 112, en la derecha: 5
    113 114 115 125 126 127 128 129 131 132 133
sentencia_etiquetada (106)
    en la izquierda: 113 114 115, en la derecha: 106
sentencia_expresion (107)
    en la izquierda: 116 117, en la derecha: 107
sentencia_compuesta (108)
    en la izquierda: 118 119, en la derecha: 9 11 13 15 108
X (109)
    en la izquierda: 120 121, en la derecha: 118 122 124
Y (110)
    en la izquierda: 122 123, en la derecha: 120
Z (111)
    en la izquierda: 124, en la derecha: 119
lista_de_sentencias (112)
    en la izquierda: 125 126, en la derecha: 122 124 126
sentencia_de_seleccion (113)
    en la izquierda: 127 128, en la derecha: 109
sentencia_de_seleccion_aux (114)
    en la izquierda: 129 130, en la derecha: 127
sentencia_de_iteracion (115)
    en la izquierda: 131 132 133, en la derecha: 110
expresion_o_vacio (116)
    en la izquierda: 134 135, en la derecha: 133
sentencia_de_salto (117)
    en la izquierda: 136 137 138 139, en la derecha: 111
expresion (118)
    en la izquierda: 140 141, en la derecha: 116 127 128 131 132 134
    138 141 147 185 194
expresion_de_asignacion (119)
    en la izquierda: 142 143, en la derecha: 87 140 141 143 199 200
operador_de_asignacion (120)
    en la izquierda: 144 145, en la derecha: 143
expresion_condicional (121)
    en la izquierda: 146 147, en la derecha: 50 51 58 65 98 99 114
    142 147
expresion_logica_or (122)
    en la izquierda: 148 149, en la derecha: 146 147 149
expresion_logica_and (123)
    en la izquierda: 150 151, en la derecha: 148 149 151
expresion_or_inclusivo (124)
    en la izquierda: 152 153, en la derecha: 150 151 153
expresion_or_exclusivo (125)
    en la izquierda: 154 155, en la derecha: 152 153 155
expresion_and (126)
    en la izquierda: 156 157, en la derecha: 154 155 157
expresion_de_igualdad (127)
    en la izquierda: 158 159, en la derecha: 156 157 159
expresion_relacional (128)
    en la izquierda: 160 161, en la derecha: 158 159 161
expresion_de_corrimiento (129)
    en la izquierda: 162 163, en la derecha: 160 161 163
expresion_aditiva (130)
    en la izquierda: 164 165 166, en la derecha: 162 163 165 166
expresion_multiplicativa (131)
    en la izquierda: 167 168 169 170, en la derecha: 164 165 166 168
    169 170
expresion_cast (132)
    en la izquierda: 171 172, en la derecha: 167 168 169 170 172 175
expresion_unaria (133)
    en la izquierda: 173 174 175 176 177, en la derecha: 143 171 174
    176
operador_unario (134)
    en la izquierda: 178 179 180 181 182 183, en la derecha: 175
expresion_posfija (135)
    en la izquierda: 184 185 187 188 189 190, en la derecha: 173 185
    188 189 190
@15 (136)
    en la izquierda: 186, en la derecha: 187
expresion_primaria (137)
    en la izquierda: 191 192 193 194, en la derecha: 184
id (138)
    en la izquierda: 195, en la derecha: 187 191
lista_expresiones_argumento_o_vacio (139)
    en la izquierda: 196 197, en la derecha: 187
lista_expresiones_argumento (140)
    en la izquierda: 199, en la derecha: 196
$@16 (141)
    en la izquierda: 198, en la derecha: 199
r_r (142)
    en la izquierda: 200 201, en la derecha: 199 200
constante (143)
    en la izquierda: 202 203 204, en la derecha: 192


estado 0

    0 $accept: . unidad_de_programa $end

    $default  reduce usando la regla 1 (unidad_de_programa)

    unidad_de_programa  ir al estado 1


estado 1

    0 $accept: unidad_de_programa . $end
    3 unidad_de_programa: unidad_de_programa . $@1 unidad_de_traduccion

    $end  desplazar e ir al estado 2

    $default  reduce usando la regla 2 ($@1)

    $@1  ir al estado 3


estado 2

    0 $accept: unidad_de_programa $end .

    $default  aceptar


estado 3

    3 unidad_de_programa: unidad_de_programa $@1 . unidad_de_traduccion

    error                                  desplazar e ir al estado 4
    IDENTIFICADOR                          desplazar e ir al estado 5
    LITERAL_CADENA                         desplazar e ir al estado 6
    CONTINUE_O_BREAK                       desplazar e ir al estado 7
    CONSTANTE_ENTERA                       desplazar e ir al estado 8
    CONSTANTE_REAL                         desplazar e ir al estado 9
    CONSTANTE_CARACTER                     desplazar e ir al estado 10
    ESPECIFICADOR_DE_TIPOS                 desplazar e ir al estado 11
    CALIFICADOR_DE_TIPOS                   desplazar e ir al estado 12
    ESPECIFICADOR_CLASE_DE_ALMACENAMIENTO  desplazar e ir al estado 13
    ESPECIFICADOR_STRUCT_UNION             desplazar e ir al estado 14
    MAS_MAS_O_MENOS_MENOS                  desplazar e ir al estado 15
    ENUM                                   desplazar e ir al estado 16
    WHILE                                  desplazar e ir al estado 17
    DO                                     desplazar e ir al estado 18
    FOR                                    desplazar e ir al estado 19
    SWITCH                                 desplazar e ir al estado 20
    CASE                                   desplazar e ir al estado 21
    DEFAULT                                desplazar e ir al estado 22
    RETURN                                 desplazar e ir al estado 23
    IF                                     desplazar e ir al estado 24
    GOTO                                   desplazar e ir al estado 25
    SIZEOF                                 desplazar e ir al estado 26
    TYPEDEF                                desplazar e ir al estado 27
    ';'                                    desplazar e ir al estado 28
    '{'                                    desplazar e ir al estado 29
    '('                                    desplazar e ir al estado 30
    '*'                                    desplazar e ir al estado 31
    '&'                                    desplazar e ir al estado 32
    '+'                                    desplazar e ir al estado 33
    '-'                                    desplazar e ir al estado 34
    '~'                                    desplazar e ir al estado 35
    '!'                                    desplazar e ir al estado 36

    unidad_de_traduccion              ir al estado 37
    declaracion_externa               ir al estado 38
    definicion_de_funcion             ir al estado 39
    declaracion                       ir al estado 40
    especificadores_de_declaracion    ir al estado 41
    especificador_de_tipo             ir al estado 42
    especificador_estructura_o_union  ir al estado 43
    especificador_enum                ir al estado 44
    declarador                        ir al estado 45
    declarador_directo                ir al estado 46
    apuntador                         ir al estado 47
    sentencia                         ir al estado 48
    sentencia_etiquetada              ir al estado 49
    sentencia_expresion               ir al estado 50
    sentencia_compuesta               ir al estado 51
    sentencia_de_seleccion            ir al estado 52
    sentencia_de_iteracion            ir al estado 53
    sentencia_de_salto                ir al estado 54
    expresion                         ir al estado 55
    expresion_de_asignacion           ir al estado 56
    expresion_condicional             ir al estado 57
    expresion_logica_or               ir al estado 58
    expresion_logica_and              ir al estado 59
    expresion_or_inclusivo            ir al estado 60
    expresion_or_exclusivo            ir al estado 61
    expresion_and                     ir al estado 62
    expresion_de_igualdad             ir al estado 63
    expresion_relacional              ir al estado 64
    expresion_de_corrimiento          ir al estado 65
    expresion_aditiva                 ir al estado 66
    expresion_multiplicativa          ir al estado 67
    expresion_cast                    ir al estado 68
    expresion_unaria                  ir al estado 69
    operador_unario                   ir al estado 70
    expresion_posfija                 ir al estado 71
    expresion_primaria                ir al estado 72
    id                                ir al estado 73
    constante                         ir al estado 74


estado 4

   18 declaracion: error . ';'
  112 sentencia: error . ';'

    ';'  desplazar e ir al estado 75


estado 5

   62 declarador_directo: IDENTIFICADOR . @8 R_declarador_directo
  113 sentencia_etiquetada: IDENTIFICADOR . ':' sentencia
  195 id: IDENTIFICADOR .

    ':'  desplazar e ir al estado 76

    error                                  reduce usando la regla 61 (@8)
    ESPECIFICADOR_DE_TIPOS                 reduce usando la regla 61 (@8)
    CALIFICADOR_DE_TIPOS                   reduce usando la regla 61 (@8)
    ESPECIFICADOR_CLASE_DE_ALMACENAMIENTO  reduce usando la regla 61 (@8)
    ESPECIFICADOR_STRUCT_UNION             reduce usando la regla 61 (@8)
    ENUM                                   reduce usando la regla 61 (@8)
    TYPEDEF                                reduce usando la regla 61 (@8)
    '{'                                    reduce usando la regla 61 (@8)
    '('                                    reduce usando la regla 61 (@8)
    '('                                    [reduce usando la regla 195 (id)]
    '['                                    reduce usando la regla 61 (@8)
    '['                                    [reduce usando la regla 195 (id)]
    $default                               reduce usando la regla 195 (id)

    @8  ir al estado 77


estado 6

  193 expresion_primaria: LITERAL_CADENA .

    $default  reduce usando la regla 193 (expresion_primaria)


estado 7

  137 sentencia_de_salto: CONTINUE_O_BREAK . ';'

    ';'  desplazar e ir al estado 78


estado 8

  202 constante: CONSTANTE_ENTERA .

    $default  reduce usando la regla 202 (constante)


estado 9

  204 constante: CONSTANTE_REAL .

    $default  reduce usando la regla 204 (constante)


estado 10

  203 constante: CONSTANTE_CARACTER .

    $default  reduce usando la regla 203 (constante)


estado 11

   26 especificador_de_tipo: ESPECIFICADOR_DE_TIPOS .

    $default  reduce usando la regla 26 (especificador_de_tipo)


estado 12

   23 especificadores_de_declaracion: CALIFICADOR_DE_TIPOS . especificadores_de_declaracion_o_vacio

    ESPECIFICADOR_DE_TIPOS                 desplazar e ir al estado 11
    CALIFICADOR_DE_TIPOS                   desplazar e ir al estado 12
    ESPECIFICADOR_CLASE_DE_ALMACENAMIENTO  desplazar e ir al estado 13
    ESPECIFICADOR_STRUCT_UNION             desplazar e ir al estado 14
    ENUM                                   desplazar e ir al estado 16
    TYPEDEF                                desplazar e ir al estado 27

    $default  reduce usando la regla 25 (especificadores_de_declaracion_o_vacio)

    especificadores_de_declaracion          ir al estado 79
    especificadores_de_declaracion_o_vacio  ir al estado 80
    especificador_de_tipo                   ir al estado 42
    especificador_estructura_o_union        ir al estado 43
    especificador_enum                      ir al estado 44


estado 13

   21 especificadores_de_declaracion: ESPECIFICADOR_CLASE_DE_ALMACENAMIENTO . especificadores_de_declaracion_o_vacio

    ESPECIFICADOR_DE_TIPOS                 desplazar e ir al estado 11
    CALIFICADOR_DE_TIPOS                   desplazar e ir al estado 12
    ESPECIFICADOR_CLASE_DE_ALMACENAMIENTO  desplazar e ir al estado 13
    ESPECIFICADOR_STRUCT_UNION             desplazar e ir al estado 14
    ENUM                                   desplazar e ir al estado 16
    TYPEDEF                                desplazar e ir al estado 27

    $default  reduce usando la regla 25 (especificadores_de_declaracion_o_vacio)

    especificadores_de_declaracion          ir al estado 79
    especificadores_de_declaracion_o_vacio  ir al estado 81
    especificador_de_tipo                   ir al estado 42
    especificador_estructura_o_union        ir al estado 43
    especificador_enum                      ir al estado 44


estado 14

   30 especificador_estructura_o_union: ESPECIFICADOR_STRUCT_UNION . IDENTIFICADOR '{' lista_declaraciones_struct '}'
   31                                 | ESPECIFICADOR_STRUCT_UNION . '{' lista_declaraciones_struct '}'
   32                                 | ESPECIFICADOR_STRUCT_UNION . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 82
    '{'            desplazar e ir al estado 83


estado 15

  174 expresion_unaria: MAS_MAS_O_MENOS_MENOS . expresion_unaria

    IDENTIFICADOR          desplazar e ir al estado 84
    LITERAL_CADENA         desplazar e ir al estado 6
    CONSTANTE_ENTERA       desplazar e ir al estado 8
    CONSTANTE_REAL         desplazar e ir al estado 9
    CONSTANTE_CARACTER     desplazar e ir al estado 10
    MAS_MAS_O_MENOS_MENOS  desplazar e ir al estado 15
    SIZEOF                 desplazar e ir al estado 26
    '('                    desplazar e ir al estado 85
    '*'                    desplazar e ir al estado 86
    '&'                    desplazar e ir al estado 32
    '+'                    desplazar e ir al estado 33
    '-'                    desplazar e ir al estado 34
    '~'                    desplazar e ir al estado 35
    '!'                    desplazar e ir al estado 36

    expresion_unaria    ir al estado 87
    operador_unario     ir al estado 70
    expresion_posfija   ir al estado 71
    expresion_primaria  ir al estado 72
    id                  ir al estado 73
    constante           ir al estado 74


estado 16

   52 especificador_enum: ENUM . IDENTIFICADOR '{' lista_de_enumerador '}'
   53                   | ENUM . '{' lista_de_enumerador '}'
   54                   | ENUM . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 88
    '{'            desplazar e ir al estado 89


estado 17

  131 sentencia_de_iteracion: WHILE . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 90


estado 18

  132 sentencia_de_iteracion: DO . sentencia WHILE '(' expresion ')' ';'

    error                  desplazar e ir al estado 91
    IDENTIFICADOR          desplazar e ir al estado 92
    LITERAL_CADENA         desplazar e ir al estado 6
    CONTINUE_O_BREAK       desplazar e ir al estado 7
    CONSTANTE_ENTERA       desplazar e ir al estado 8
    CONSTANTE_REAL         desplazar e ir al estado 9
    CONSTANTE_CARACTER     desplazar e ir al estado 10
    MAS_MAS_O_MENOS_MENOS  desplazar e ir al estado 15
    WHILE                  desplazar e ir al estado 17
    DO                     desplazar e ir al estado 18
    FOR                    desplazar e ir al estado 19
    SWITCH                 desplazar e ir al estado 20
    CASE                   desplazar e ir al estado 21
    DEFAULT                desplazar e ir al estado 22
    RETURN                 desplazar e ir al estado 23
    IF                     desplazar e ir al estado 24
    GOTO                   desplazar e ir al estado 25
    SIZEOF                 desplazar e ir al estado 26
    ';'                    desplazar e ir al estado 28
    '{'                    desplazar e ir al estado 29
    '('                    desplazar e ir al estado 93
    '*'                    desplazar e ir al estado 86
    '&'                    desplazar e ir al estado 32
    '+'                    desplazar e ir al estado 33
    '-'                    desplazar e ir al estado 34
    '~'                    desplazar e ir al estado 35
    '!'                    desplazar e ir al estado 36

    sentencia                 ir al estado 94
    sentencia_etiquetada      ir al estado 49
    sentencia_expresion       ir al estado 50
    sentencia_compuesta       ir al estado 51
    sentencia_de_seleccion    ir al estado 52
    sentencia_de_iteracion    ir al estado 53
    sentencia_de_salto        ir al estado 54
    expresion                 ir al estado 55
    expresion_de_asignacion   ir al estado 56
    expresion_condicional     ir al estado 57
    expresion_logica_or       ir al estado 58
    expresion_logica_and      ir al estado 59
    expresion_or_inclusivo    ir al estado 60
    expresion_or_exclusivo    ir al estado 61
    expresion_and             ir al estado 62
    expresion_de_igualdad     ir al estado 63
    expresion_relacional      ir al estado 64
    expresion_de_corrimiento  ir al estado 65
    expresion_aditiva         ir al estado 66
    expresion_multiplicativa  ir al estado 67
    expresion_cast            ir al estado 68
    expresion_unaria          ir al estado 69
    operador_unario           ir al estado 70
    expresion_posfija         ir al estado 71
    expresion_primaria        ir al estado 72
    id                        ir al estado 73
    constante                 ir al estado 74


estado 19

  133 sentencia_de_iteracion: FOR . '(' expresion_o_vacio ';' expresion_o_vacio ';' expresion_o_vacio ')' sentencia

    '('  desplazar e ir al estado 95


estado 20

  128 sentencia_de_seleccion: SWITCH . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 96


estado 21

  114 sentencia_etiquetada: CASE . expresion_condicional ':' sentencia
